# strands-cosmos

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  COSMOS3_INTEGRATION.md  README.md  SECURITY.md  index.html  justfile  mkdocs.yml  pyproject.toml  pyproject.toml.bak  sitemap.xml
.github/workflows/: auto-release.yml  release.yml
api-reference/: index.html
architecture/: index.html
demo/: render_demo.py
docs/: api-reference.md  architecture.md  changelog.md  index.md
docs/examples/: overview.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: chain-of-thought.md  cosmos3.md  image-reasoning.md  jetson.md  tool-usage.md  video-understanding.md
docs/stylesheets/: extra.css
examples/: 01_basic_text.py  02_video_caption.py  03_driving_analysis.py  04_embodied_reasoning.py  05_tool_usage.py  06_cosmos3_reason.py  07_cosmos3_generate.py  08_cosmos3_action.py  09_cosmos3_showcase.py  10_cosmos3_finetune.py
examples/basic-text/: index.html
examples/driving/: index.html
examples/embodied/: index.html
examples/overview/: index.html
examples/tool-usage/: index.html
examples/video-caption/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/chain-of-thought/: index.html
guide/image-reasoning/: index.html
guide/jetson/: index.html
guide/tool-usage/: index.html
guide/video-understanding/: index.html
notebooks/: 01_basic_text.ipynb  02_video_caption.ipynb  03_driving_analysis.ipynb  04_embodied_reasoning.ipynb  05_tool_usage.ipynb
search/: search_index.json
strands_cosmos/: __init__.py  cosmos3_generator_model.py  cosmos3_reasoner_model.py  cosmos_model.py  cosmos_vision_model.py  fix_cublas.py
strands_cosmos/tools/: __init__.py  _common.py  _security.py  build_engine.py  cosmos3.py  cosmos3_extra.py  cosmos3_train.py  cosmos_invoke.py  cosmos_vision_invoke.py  curate.py  distill.py  evaluate.py  export_onnx.py  image_read.py  inference.py  model_download.py  nats_pub.py  post_train.py  predict_generate.py  quantize.py  reason_hf.py  rtp.py  serve.py  sysinfo.py  transfer_generate.py  video_utils.py
tests/: test_cosmos3_imports.py  test_no_just_interpolation.py  test_security.py
